test_suite/tests/ui/borrow/duplicate_variant.stderr
error: duplicate serde attribute `borrow`
 --> tests/ui/borrow/duplicate_variant.rs:9:15
  |
9 |     S(#[serde(borrow)] Str<'a>),
  |               ^^^^^^
